# lab-flask-tdd

./: Makefile  pyproject.toml  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
lab/: counter.py  test_counter.py
service/: __init__.py  routes.py
service/common/: cli_commands.py  error_handlers.py
tests/: test_cli_commands.py  test_models.py  test_routes.py
