[tool.poetry]
name = "pet-shop"
version = "0.1.0"
description = "Petshop microservice"
authors = ["John Rofrano <johnnyroy@johnrofrano.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.3"
Flask-SQLAlchemy = "3.0.2"
python-dotenv = "^1.0.0"
gunicorn = "^21.2.0"
sqlalchemy = "2.0.0"
psycopg2 = "2.9.5"

[tool.poetry.group.dev.dependencies]
honcho = "^1.1.0"
pylint = "^2.17.5"
flake8 = "^6.1.0"
black = "^23.7.0"
pytest = "^7.4.0"
pytest-pspec = "^0.0.4"
pytest-cov = "^4.1.0"
factory-boy = "^3.3.0"
coverage = "^7.3.0"
httpie = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 127
disable = "no-member,protected-access,global-statement"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--pspec --cov=service"
testpaths = ["tests"]

[tool.coverage.run]
source = ["service"]
omit = [
    "venv/*",
    ".venv/*"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "pragma: no branch",
    "pass",
    "subprocess.CalledProcessError",
    "sys.exit",
    "if __name__ == .__main__.:"
]
ignore_errors = true

[tool.coverage.xml]
output="./coverage.xml"

[tool.coverage.html]
title = "Test Coverage Report"
directory = "coverage_html_report"
